--- a/docker-client/build.gradle
+++ b/docker-client/build.gradle
@@ -23,6 +23,7 @@ dependencies {
     compileOnly 'org.projectlombok:lombok'
     annotationProcessor 'org.projectlombok:lombok'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    implementation 'com.github.docker-java:docker-java:3.2.13'
 }
 
 tasks.named('test') {
