--- a/ssh-with-react/build.gradle
+++ b/ssh-with-react/build.gradle
@@ -24,6 +24,7 @@ dependencies {
     compileOnly 'org.projectlombok:lombok'
     annotationProcessor 'org.projectlombok:lombok'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    implementation 'com.jcraft:jsch:0.1.55'
 }
 
 tasks.named('test') {
